# coo-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  drizzle.config.ts  ecosystem.config.cjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.claude/commands/: deploy.md  fix-issue.md  report.md
.claude/rules/: api-conventions.md  code-style.md  testing.md
config/: mcp_servers.json
docs/: CHANGELOG.md  DEMO.md  SETUP.md  USAGE.md  coo-assistant-overview.html
scripts/: browser-login.ts  db-migrate.ts  google-oauth.ts  gramjs-login.ts  setup.sh
src/: config.py  config.ts  index.ts  main.py
src/bot/: auth-types.ts  auth.ts  callbacks.ts  commands.py  commands.ts  draft-approvals.ts  meeting-approvals.ts  monitors.py  monitors.ts  onboarding.ts  permissions.ts  slack-commands.ts  slack-dashboard.ts  slack-monitor.ts  telegram-bot.ts  telegram_bot.py
src/core/: agent.py  agent.ts  google-auth.ts  mcp-client.ts  mcp_client.py  scheduler.py  scheduler.ts
src/integrations/: gmail.py  google_calendar.py  kanbanchi.py
src/models/: __init__.py  client.py  database.py  database.ts  employee.py  message_log.py  report.py  schema.ts  task.py
src/services/: auto-prioritizer.test.ts  auto-prioritizer.ts  auto-scheduler.test.ts  auto-scheduler.ts  bot-actions.ts  calendar-sync.ts  calendar_sync.py  capacity-planner.test.ts  capacity-planner.ts  chat-monitor.ts  chat_monitor.py  client-updates.test.ts  client-updates.ts  commitment-tracker.ts  communication-patterns.ts  (+45 more)
(+8 files in other folders)
